--- a/evaluation/rebound-test.ipynb
+++ b/evaluation/rebound-test.ipynb
@@ -5,230 +5,212 @@
    "id": "a97b002d0f61899e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T20:24:44.655847Z",
-     "start_time": "2025-04-06T20:24:44.485078Z"
+     "end_time": "2025-04-10T12:53:06.491509Z",
+     "start_time": "2025-04-10T12:53:06.413454Z"
     }
    },
    "source": [
     "import rebound\n",
-    "sim = rebound.Simulation()"
+    "import math\n",
+    "# Ich kann eine Funktion heartbeat (oder so aehnlich) definieren, die automatisch nach jedem Iterationsschritt ausgefuehrt wird\n",
+    "\n",
+    "g = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015\n",
+    "au = 1.495978707e11          # [m]   <float> astronomical unit\n",
+    "r_sun = 6.96342e8            # [m]   <float> solar radius\n",
+    "m_sun = 1.98847e30           # [kg]  <float> solar mass +/- 0.00007\n",
+    "l_sun = 3.83e26              # [W]   <float> solar luminosity\n",
+    "r_jup = 7.1492e7             # [m]   <float> Jupiter radius\n",
+    "m_jup = 1.8981246e27         # [kg]  <float> Jupiter mass\n",
+    "r_earth = 6.378135e6         # [m]   <float> Earth radius R⊕\n",
+    "m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕\n",
+    "\n",
+    "hour = 60 * 60\n",
+    "day = 24 * hour\n",
+    "year = 365.25 * day"
    ],
    "outputs": [],
    "execution_count": 1
   },
   {
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-06T20:24:44.663037Z",
-     "start_time": "2025-04-06T20:24:44.660074Z"
+     "end_time": "2025-04-10T12:53:07.261287Z",
+     "start_time": "2025-04-10T12:53:07.256862Z"
     }
    },
    "cell_type": "code",
-   "source": "sim.add(m=1)",
-   "id": "initial_id",
+   "source": [
+    "sim = rebound.Simulation()\n",
+    "sim.G = g  # gravitational constant\n",
+    "sim.dt = hour"
+   ],
+   "id": "ae5954cd6a515cad",
    "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-06T20:25:29.143323Z",
-     "start_time": "2025-04-06T20:25:29.140500Z"
+     "end_time": "2025-04-10T12:53:09.036116Z",
+     "start_time": "2025-04-10T12:53:09.030116Z"
     }
    },
    "cell_type": "code",
-   "source": "sim.add(m=1e-3, x=1, vy=1)",
-   "id": "13cc01e385cee227",
+   "source": [
+    "name = \"TOI-4504\"\n",
+    "mass = 0.885 * m_sun\n",
+    "radius = 0.92 * r_sun\n",
+    "sim.add(hash=name, m=mass, r=radius)\n",
+    "\n",
+    "name = \"TOI-4504c\"\n",
+    "mass = 10.4 * m_earth\n",
+    "radius = 2.691 * r_earth\n",
+    "e = 0.0\n",
+    "i = 87.4 / 180 * math.pi\n",
+    "P = 2.42614 * day\n",
+    "longitude_of_ascending_node = 0 / 180 * math.pi\n",
+    "argument_of_periapsis = 90 / 180 * math.pi\n",
+    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=longitude_of_ascending_node, omega=argument_of_periapsis)\n",
+    "\n",
+    "name = \"TOI-4504c\"\n",
+    "mass = 3.7672 * m_jup\n",
+    "radius = 0.9897 * r_jup\n",
+    "e = 0.0320\n",
+    "i = 89.69 / 180 * math.pi\n",
+    "P = 82.5438 * day  # valid for epoch BJD = 2458400\n",
+    "longitude_of_ascending_node = 0  / 180 * math.pi\n",
+    "argument_of_periapsis = 270.9 / 180 * math.pi\n",
+    "ma = 173.1 / 180 * math.pi\n",
+    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=longitude_of_ascending_node, omega=argument_of_periapsis, M=ma)\n",
+    "\n",
+    "name = \"TOI-4504d\"\n",
+    "mass = 1.4166 * m_jup\n",
+    "radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c\n",
+    "e = 0.0445\n",
+    "i = 84.74 / 180 * math.pi\n",
+    "P = 40.5634 * day  # valid for epoch BJD = 2458400\n",
+    "longitude_of_ascending_node = 0 / 180 * math.pi  # Ω unknown\n",
+    "argument_of_periapsis = 93.5 / 180 * math.pi\n",
+    "ma = 280.6 / 180 * math.pi\n",
+    "sim.add(hash=name, m=mass, r=radius, P=P, inc=i, e=e, Omega=longitude_of_ascending_node, omega=argument_of_periapsis, M=ma)\n",
+    "\n",
+    "\n",
+    "sim.move_to_com()  # move origin to center of mass before integrating -> better numerical stability\n",
+    "t = 0\n",
+    "TOI4504b = sim.particles[1]\n",
+    "TOI4504c = sim.particles[2]\n",
+    "TOI4504d = sim.particles[3]"
+   ],
+   "id": "initial_id",
    "outputs": [],
    "execution_count": 3
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for orbit in sim.orbits():\n",
+    "    print(orbit)"
+   ],
+   "id": "13cc01e385cee227",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sim.status(showAllFields=False)",
+   "id": "98d825511e080ae1",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "print(sim.particles[1].inc/math.pi*180)",
+   "id": "5aa2e29566b907f9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T20:25:42.478991Z",
-     "start_time": "2025-04-06T20:25:42.476486Z"
+     "end_time": "2025-04-10T12:59:50.588633Z",
+     "start_time": "2025-04-10T12:59:50.489386Z"
     }
    },
    "cell_type": "code",
-   "source": "sim.status()",
-   "id": "98d825511e080ae1",
+   "source": [
+    "t += 3 * year\n",
+    "sim.integrate(t)\n",
+    "print(f\"Inc: b={TOI4504b.inc / math.pi * 180:.2f} c={TOI4504c.inc / math.pi * 180:.2f} d={TOI4504d.inc / math.pi * 180:.2f}\")"
+   ],
+   "id": "80702ecf15ba024e",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------------------------------\n",
-      "REBOUND version:     \t4.4.8\n",
-      "REBOUND built on:    \tApr  6 2025 11:48:20\n",
-      "Number of particles: \t2\n",
-      "Selected integrator: \tias15\n",
-      "Simulation time:     \t0.0000000000000000e+00\n",
-      "Current timestep:    \t0.001000\n",
-      "---------------------------------\n",
-      "<rebound.particle.Particle object at 0x20a43cd5bd0, m=1.0 x=0.0 y=0.0 z=0.0 vx=0.0 vy=0.0 vz=0.0>\n",
-      "<rebound.particle.Particle object at 0x20a43cd5950, m=0.001 x=1.0 y=0.0 z=0.0 vx=0.0 vy=1.0 vz=0.0>\n",
-      "---------------------------------\n",
-      "The following fields have non-default values:\n",
-      "N:\n",
-      "< 0\n",
-      "---\n",
-      "> 2\n",
-      "rand_seed:\n",
-      "< 501884\n",
-      "---\n",
-      "> 677884\n",
-      "particles:\n",
-      "> (256 bytes, values not printed)\n",
-      "\n"
+      "Inc: b=88.62 c=87.96 d=90.64\n"
      ]
+    }
+   ],
+   "execution_count": 229
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T12:53:26.936827Z",
+     "start_time": "2025-04-10T12:53:26.910966Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# sim.start_server(port=1234)  # browser\n",
+    "sim.widget(size=(750,750))  # notebook"
+   ],
+   "id": "b38e676bde1d64d2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x23b18fef920>"
+      ],
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"750\"\n",
+       "            height=\"750\"\n",
+       "            src=\"http://localhost:1234\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "execution_count": 4
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-06T20:50:47.776865Z",
-     "start_time": "2025-04-06T20:50:28.589385Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": "sim.integrate(100000)",
-   "id": "80702ecf15ba024e",
+   "source": "sim.dt",
+   "id": "610c5f90dcc5065c",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-06T20:50:55.897295Z",
-     "start_time": "2025-04-06T20:50:55.894123Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": "sim.status()",
-   "id": "517b8588d4a883d1",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------\n",
-      "REBOUND version:     \t4.4.8\n",
-      "REBOUND built on:    \tApr  6 2025 11:48:20\n",
-      "Number of particles: \t2\n",
-      "Selected integrator: \tias15\n",
-      "Simulation time:     \t1.0000000000000000e+05\n",
-      "Current timestep:    \t-0.174419\n",
-      "---------------------------------\n",
-      "<rebound.particle.Particle object at 0x20a440cf0d0, m=1.0 x=0.00040794639802473694 y=-0.000910371608968131 z=0.0 vx=0.0009125659079176847 vy=0.0004099286571891986 vz=0.0>\n",
-      "<rebound.particle.Particle object at 0x20a440cd550, m=0.001 x=-0.40794636730517037 y=0.9103716040914178 z=0.0 vx=-0.9125659079177222 vy=-0.40992865718919247 vz=0.0>\n",
-      "---------------------------------\n",
-      "The following fields have non-default values:\n",
-      "t:\n",
-      "< 0.000000e+00\n",
-      "---\n",
-      "> 1.000000e+05\n",
-      "dt:\n",
-      "< 1.000000e-03\n",
-      "---\n",
-      "> -1.744191e-01\n",
-      "N:\n",
-      "< 0\n",
-      "---\n",
-      "> 2\n",
-      "walltime:\n",
-      "< 0.000000e+00\n",
-      "---\n",
-      "> 4.027600e+01\n",
-      "walltime_last_steps:\n",
-      "< 0.000000e+00\n",
-      "---\n",
-      "> 3.610369e-06\n",
-      "steps_done:\n",
-      "< 0\n",
-      "---\n",
-      "> 10874709\n",
-      "dt_last_done:\n",
-      "< 0.000000e+00\n",
-      "---\n",
-      "> -1.561058e-01\n",
-      "rand_seed:\n",
-      "< 919884\n",
-      "---\n",
-      "> 677884\n",
-      "particles:\n",
-      "> (256 bytes, values not printed)\n",
-      "ri_ias15.at:\n",
-      "> (48 bytes, values not printed)\n",
-      "ri_ias15.x0:\n",
-      "> (48 bytes, values not printed)\n",
-      "ri_ias15.v0:\n",
-      "> (48 bytes, values not printed)\n",
-      "ri_ias15.a0:\n",
-      "> (48 bytes, values not printed)\n",
-      "ri_ias15.csx:\n",
-      "> (48 bytes, values not printed)\n",
-      "ri_ias15.csv:\n",
-      "> (48 bytes, values not printed)\n",
-      "ri_ias15.csa0:\n",
-      "> (48 bytes, values not printed)\n",
-      "ri_ias15.g:\n",
-      "> (336 bytes, values not printed)\n",
-      "ri_ias15.b:\n",
-      "> (336 bytes, values not printed)\n",
-      "ri_ias15.csb:\n",
-      "> (336 bytes, values not printed)\n",
-      "ri_ias15.e:\n",
-      "> (336 bytes, values not printed)\n",
-      "ri_ias15.br:\n",
-      "> (336 bytes, values not printed)\n",
-      "ri_ias15.er:\n",
-      "> (336 bytes, values not printed)\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 19
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-06T20:48:58.022903Z",
-     "start_time": "2025-04-06T20:48:58.014844Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "sim.calculate_com().xyz",
-   "id": "5aa2e29566b907f9",
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Simulation' object has no attribute 'calculate_com'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[15], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43msim\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcalculate_com\u001B[49m()\u001B[38;5;241m.\u001B[39mxyz\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'Simulation' object has no attribute 'calculate_com'"
-     ]
-    }
-   ],
-   "execution_count": 15
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-06T20:49:50.889889Z",
-     "start_time": "2025-04-06T20:49:50.887605Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "sim.move_to_com()",
-   "id": "4d7598975257e746",
+   "source": "",
+   "id": "279d4d07ec4b1ca6",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": null
   }
  ],
  "metadata": {
