--- a/evaluation/rebound-test.ipynb
+++ b/evaluation/rebound-test.ipynb
@@ -5,13 +5,15 @@
    "id": "a97b002d0f61899e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T12:53:06.491509Z",
-     "start_time": "2025-04-10T12:53:06.413454Z"
+     "end_time": "2025-04-10T16:24:30.779977Z",
+     "start_time": "2025-04-10T16:24:30.631984Z"
     }
    },
    "source": [
     "import rebound\n",
     "import math\n",
+    "import time\n",
+    "\n",
     "# Ich kann eine Funktion heartbeat (oder so aehnlich) definieren, die automatisch nach jedem Iterationsschritt ausgefuehrt wird\n",
     "\n",
     "g = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015\n",
@@ -34,15 +36,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T12:53:07.261287Z",
-     "start_time": "2025-04-10T12:53:07.256862Z"
+     "end_time": "2025-04-10T16:24:30.785597Z",
+     "start_time": "2025-04-10T16:24:30.783019Z"
     }
    },
    "cell_type": "code",
    "source": [
     "sim = rebound.Simulation()\n",
     "sim.G = g  # gravitational constant\n",
-    "sim.dt = hour"
+    "# sim.dt = hour"
    ],
    "id": "ae5954cd6a515cad",
    "outputs": [],
@@ -52,8 +54,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-10T12:53:09.036116Z",
-     "start_time": "2025-04-10T12:53:09.030116Z"
+     "end_time": "2025-04-10T16:24:30.865716Z",
+     "start_time": "2025-04-10T16:24:30.861331Z"
     }
    },
    "cell_type": "code",
@@ -107,62 +109,90 @@
    "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T16:24:30.871917Z",
+     "start_time": "2025-04-10T16:24:30.869308Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "for orbit in sim.orbits():\n",
     "    print(orbit)"
    ],
    "id": "13cc01e385cee227",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "sim.status(showAllFields=False)",
-   "id": "98d825511e080ae1",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "print(sim.particles[1].inc/math.pi*180)",
-   "id": "5aa2e29566b907f9",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-10T12:59:50.588633Z",
-     "start_time": "2025-04-10T12:59:50.489386Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "t += 3 * year\n",
-    "sim.integrate(t)\n",
-    "print(f\"Inc: b={TOI4504b.inc / math.pi * 180:.2f} c={TOI4504c.inc / math.pi * 180:.2f} d={TOI4504d.inc / math.pi * 180:.2f}\")"
-   ],
-   "id": "80702ecf15ba024e",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inc: b=88.62 c=87.96 d=90.64\n"
+      "<rebound.Orbit instance, a=5075290940.036573 e=1.6483103446032773e-16 inc=1.5254177662430441 Omega=0.0 omega=4.709916062637188 f=3.144065571337295>\n",
+      "<rebound.Orbit instance, a=53361376404.38059 e=0.0320000000000006 inc=1.565385806113714 Omega=0.0 omega=4.728096943652636 f=3.0285595407142374>\n",
+      "<rebound.Orbit instance, a=33246587462.42604 e=0.044500000000000005 inc=1.4789920081399948 Omega=0.0 omega=1.6318828506146996 f=4.809123535023749>\n"
      ]
     }
    ],
-   "execution_count": 229
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T12:53:26.936827Z",
-     "start_time": "2025-04-10T12:53:26.910966Z"
+     "end_time": "2025-04-10T16:24:30.954924Z",
+     "start_time": "2025-04-10T16:24:30.952290Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sim.status(showAllFields=False)",
+   "id": "98d825511e080ae1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "REBOUND version:     \t4.4.8\n",
+      "REBOUND built on:    \tApr  6 2025 11:48:20\n",
+      "Number of particles: \t4\n",
+      "Selected integrator: \tias15\n",
+      "Simulation time:     \t0.0000000000000000e+00\n",
+      "Current timestep:    \t0.001000\n",
+      "---------------------------------\n",
+      "<rebound.particle.Particle object at 0x24dc7ea90d0, m=1.75979595e+30 x=-71225355.92424245 y=-1931177.5798455882 z=-229780103.21722955 vx=206.994656865213 vy=-8.285379970559248 vz=-107.49542171721878>\n",
+      "<rebound.particle.Particle object at 0x24dc7ea9450, m=6.210880000000001e+25 x=-71225355.92424214 y=228299185.08554232 z=4840286179.004759 vx=-151921.72524435728 vy=-8.285379970558825 vz=-107.49542171720947>\n",
+      "<rebound.particle.Particle object at 0x24dc7ea90d0, m=7.15061499312e+27 x=5278781722.348262 y=294554585.1225321 z=54566371691.866135 vx=-45106.89846287148 vy=16.57157991085989 vz=4486.649725049302>\n",
+      "<rebound.particle.Particle object at 0x24dc7ea9450, m=2.68888330836e+27 x=32578572901.467384 y=475309827.93987995 z=5162870059.421884 vx=-12008.932567672144 vy=5378.662465073474 vz=58423.650781688804>\n",
+      "---------------------------------\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T16:24:31.046578Z",
+     "start_time": "2025-04-10T16:24:31.043604Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(sim.particles[1].inc/math.pi*180)",
+   "id": "5aa2e29566b907f9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87.40000000000002\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T16:24:31.129276Z",
+     "start_time": "2025-04-10T16:24:31.105714Z"
     }
    },
    "cell_type": "code",
@@ -175,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x23b18fef920>"
+       "<IPython.lib.display.IFrame at 0x24dc7d87230>"
       ],
       "text/html": [
        "\n",
@@ -194,18 +224,58 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T16:26:18.724478Z",
+     "start_time": "2025-04-10T16:24:31.136331Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for i in range(10000):\n",
+    "    t = i * year / 100\n",
+    "    sim.integrate(t)\n",
+    "    time.sleep(0.01)\n",
+    "    # print(f\"t[year]={t / year:.1f} Inc: b={TOI4504b.inc / math.pi * 180:.1f} c={TOI4504c.inc / math.pi * 180:.1f} d={TOI4504d.inc / math.pi * 180:.1f}\")"
+   ],
+   "id": "80702ecf15ba024e",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T16:26:18.786946Z",
+     "start_time": "2025-04-10T16:26:18.783869Z"
+    }
+   },
    "cell_type": "code",
    "source": "sim.dt",
    "id": "610c5f90dcc5065c",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5834.051354860692"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T16:26:18.806564Z",
+     "start_time": "2025-04-10T16:26:18.804885Z"
+    }
+   },
    "cell_type": "code",
    "source": "",
    "id": "279d4d07ec4b1ca6",
