--- a/evaluation/get_flux_data.ipynb
+++ b/evaluation/get_flux_data.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-30T19:29:58.867044Z",
-     "start_time": "2025-03-30T19:29:56.210555Z"
+     "end_time": "2025-04-22T11:32:15.058426Z",
+     "start_time": "2025-04-22T11:32:00.024065Z"
     }
    },
    "cell_type": "code",
@@ -27,15 +27,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-30T18:15:30.287813Z",
-     "start_time": "2025-03-30T18:15:29.492529Z"
+     "end_time": "2025-04-22T11:33:01.416989Z",
+     "start_time": "2025-04-22T11:33:00.921144Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# search_result = lk.search_lightcurve('TIC349972412', cadence='long')\n",
     "# search_result = lk.search_lightcurve('TIC349972412', author='TESS-SPOC', cadence='long')\n",
-    "search_result = lk.search_lightcurve('TIC349972412', sector=61)\n",
+    "search_result = lk.search_lightcurve('TIC349972412', sector=89)\n",
     "# search_result = lk.search_lightcurve('TIC349972412', author='QLP', cadence='long')\n",
     "# search_result = lk.search_lightcurve('TOI-4504', author='Tess', cadence='long')\n",
     "# lc_collection = search_result.download_all()\n",
@@ -47,39 +47,37 @@
     {
      "data": {
       "text/plain": [
-       "SearchResult containing 3 data products.\n",
+       "SearchResult containing 2 data products.\n",
        "\n",
-       " #     mission     year   author  exptime target_name distance\n",
-       "                                     s                 arcsec \n",
-       "--- -------------- ---- --------- ------- ----------- --------\n",
-       "  0 TESS Sector 61 2023      SPOC     120   349972412      0.0\n",
-       "  1 TESS Sector 61 2023 TESS-SPOC     200   349972412      0.0\n",
-       "  2 TESS Sector 61 2023       QLP     200   349972412      0.0"
+       " #     mission     year author exptime target_name distance\n",
+       "                                  s                 arcsec \n",
+       "--- -------------- ---- ------ ------- ----------- --------\n",
+       "  0 TESS Sector 89 2025   SPOC     120   349972412      0.0\n",
+       "  1 TESS Sector 89 2025    QLP     200   349972412      0.0"
       ],
       "text/html": [
-       "SearchResult containing 3 data products.\n",
+       "SearchResult containing 2 data products.\n",
        "\n",
-       "<table id=\"table1842320384688\">\n",
+       "<table id=\"table2268214209920\">\n",
        "<thead><tr><th>#</th><th>mission</th><th>year</th><th>author</th><th>exptime</th><th>target_name</th><th>distance</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th>s</th><th></th><th>arcsec</th></tr></thead>\n",
-       "<tr><td>0</td><td>TESS Sector 61</td><td>2023</td><td><a href='https://heasarc.gsfc.nasa.gov/docs/tess/pipeline.html'>SPOC</a></td><td>120</td><td>349972412</td><td>0.0</td></tr>\n",
-       "<tr><td>1</td><td>TESS Sector 61</td><td>2023</td><td><a href='https://archive.stsci.edu/hlsp/tess-spoc'>TESS-SPOC</a></td><td>200</td><td>349972412</td><td>0.0</td></tr>\n",
-       "<tr><td>2</td><td>TESS Sector 61</td><td>2023</td><td><a href='https://archive.stsci.edu/hlsp/qlp'>QLP</a></td><td>200</td><td>349972412</td><td>0.0</td></tr>\n",
+       "<tr><td>0</td><td>TESS Sector 89</td><td>2025</td><td><a href='https://heasarc.gsfc.nasa.gov/docs/tess/pipeline.html'>SPOC</a></td><td>120</td><td>349972412</td><td>0.0</td></tr>\n",
+       "<tr><td>1</td><td>TESS Sector 89</td><td>2025</td><td><a href='https://archive.stsci.edu/hlsp/qlp'>QLP</a></td><td>200</td><td>349972412</td><td>0.0</td></tr>\n",
        "</table>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-30T19:30:05.172897Z",
-     "start_time": "2025-03-30T19:30:03.994589Z"
+     "end_time": "2025-04-22T11:43:24.720759Z",
+     "start_time": "2025-04-22T11:43:24.297285Z"
     }
    },
    "cell_type": "code",
@@ -87,7 +85,7 @@
     "# Search for target pixel files\n",
     "# https://lightkurve.github.io/lightkurve/reference/api/lightkurve.search_targetpixelfile.html#lightkurve.search_targetpixelfile\n",
     "# search = search_targetpixelfile(\"TIC 349972412\", sector=[28, 31, 34, 37, 61, 64, 67, 87, 88, 89])\n",
-    "search = search_targetpixelfile(\"TIC 349972412\", sector=61)\n",
+    "search = search_targetpixelfile(\"TIC 349972412\", sector=89)\n",
     "# search = search_targetpixelfile(\"TIC 349972412\", author=\"SPOC\", sector=[28, 31, 34, 37, 64, 67])\n",
     "search"
    ],
@@ -96,31 +94,29 @@
     {
      "data": {
       "text/plain": [
-       "SearchResult containing 2 data products.\n",
+       "SearchResult containing 1 data products.\n",
        "\n",
-       " #     mission     year   author  exptime target_name distance\n",
-       "                                     s                 arcsec \n",
-       "--- -------------- ---- --------- ------- ----------- --------\n",
-       "  0 TESS Sector 61 2023      SPOC     120   349972412      0.0\n",
-       "  1 TESS Sector 61 2023 TESS-SPOC     200   349972412      0.0"
+       " #     mission     year author exptime target_name distance\n",
+       "                                  s                 arcsec \n",
+       "--- -------------- ---- ------ ------- ----------- --------\n",
+       "  0 TESS Sector 89 2025   SPOC     120   349972412      0.0"
       ],
       "text/html": [
-       "SearchResult containing 2 data products.\n",
+       "SearchResult containing 1 data products.\n",
        "\n",
-       "<table id=\"table2427052392704\">\n",
+       "<table id=\"table2268217456352\">\n",
        "<thead><tr><th>#</th><th>mission</th><th>year</th><th>author</th><th>exptime</th><th>target_name</th><th>distance</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th>s</th><th></th><th>arcsec</th></tr></thead>\n",
-       "<tr><td>0</td><td>TESS Sector 61</td><td>2023</td><td><a href='https://heasarc.gsfc.nasa.gov/docs/tess/pipeline.html'>SPOC</a></td><td>120</td><td>349972412</td><td>0.0</td></tr>\n",
-       "<tr><td>1</td><td>TESS Sector 61</td><td>2023</td><td><a href='https://archive.stsci.edu/hlsp/tess-spoc'>TESS-SPOC</a></td><td>200</td><td>349972412</td><td>0.0</td></tr>\n",
+       "<tr><td>0</td><td>TESS Sector 89</td><td>2025</td><td><a href='https://heasarc.gsfc.nasa.gov/docs/tess/pipeline.html'>SPOC</a></td><td>120</td><td>349972412</td><td>0.0</td></tr>\n",
        "</table>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {
