--- a/evaluation/get_flux_data.ipynb
+++ b/evaluation/get_flux_data.ipynb
@@ -15,6 +15,8 @@
    },
    "cell_type": "code",
    "source": [
+    "from locale import normalize\n",
+    "\n",
     "import lightkurve as lk\n",
     "from lightkurve import search_targetpixelfile\n",
     "\n",
@@ -325,7 +327,6 @@
    },
    "cell_type": "code",
    "source": [
-    "# search_result = lk.search_lightcurve('TIC349972412')\n",
     "search_result = lk.search_lightcurve('TIC349972412', author=['SPOC', 'TESS-SPOC'], sector=31)\n",
     "lc_collection = search_result.download_all()\n",
     "lc_collection.plot();\n",
@@ -383,7 +384,6 @@
    },
    "cell_type": "code",
    "source": [
-    "# search_result = lk.search_lightcurve('TIC349972412')\n",
     "search_result = lk.search_lightcurve('TIC349972412', author=['QLP'], sector=31)\n",
     "lc_collection = search_result.download_all()\n",
     "lc_collection.plot();\n",
@@ -437,11 +437,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# search_result = lk.search_lightcurve('TIC349972412')\n",
-    "# search_result = lk.search_lightcurve('TIC349972412', sector=6)\n",
-    "# search_result = lk.search_lightcurve('TIC349972412', author=['QLP', 'GSFC-ELEANOR-LITE', 'TASOC', 'TGLC'], sector=6)\n",
-    "search_result = lk.search_lightcurve('TIC349972412', author=['QLP', 'TGLC'], sector=6)\n",
-    "# normalized: 'TGLC', 'QLP'\n",
+    "search_result = lk.search_lightcurve('TIC349972412', author=['QLP', 'TGLC'], sector=6)  # normalized: 'TGLC', 'QLP'\n",
     "lc_collection = search_result.download_all()\n",
     "lc_collection.plot();\n",
     "search_result"
@@ -496,12 +492,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# search_result = lk.search_lightcurve('TIC349972412')\n",
-    "# search_result = lk.search_lightcurve('TIC349972412', sector=6)\n",
-    "# search_result = lk.search_lightcurve('TIC349972412', author=['QLP', 'GSFC-ELEANOR-LITE', 'TASOC', 'TGLC'], sector=6)\n",
     "search_result = lk.search_lightcurve('TIC349972412', author=['GSFC-ELEANOR-LITE', 'TASOC'], sector=6)\n",
-    "# search_result = lk.search_lightcurve('TIC349972412', author=['QLP', 'TGLC'], sector=6)\n",
-    "# normalized: 'TGLC', 'QLP'\n",
     "lc_collection = search_result.download_all()\n",
     "lc_collection.plot();\n",
     "search_result"
