--- a/process_TESS_data/process_sector_002.ipynb
+++ b/process_TESS_data/process_sector_002.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-23T13:02:20.481009Z",
-     "start_time": "2025-06-23T13:02:18.628990Z"
+     "end_time": "2025-06-24T09:22:44.949927Z",
+     "start_time": "2025-06-24T09:22:44.946600Z"
     }
    },
    "source": [
@@ -22,13 +22,13 @@
     "path = '../research/star_systems/TOI-4504/lightkurve/'\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T13:02:20.684401Z",
-     "start_time": "2025-06-23T13:02:20.584639Z"
+     "end_time": "2025-06-24T09:22:47.048056Z",
+     "start_time": "2025-06-24T09:22:46.958006Z"
     }
    },
    "cell_type": "code",
@@ -166,12 +166,40 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-24T09:22:51.444991Z",
+     "start_time": "2025-06-24T09:22:51.384624Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = calculate_flux_err(df, window_length=101)\n",
+    "df"
+   ],
+   "id": "4b71ef4101f07c74",
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "calculate_flux_err() got an unexpected keyword argument 'window_length'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mcalculate_flux_err\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mwindow_length\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m101\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m df\n",
+      "\u001B[1;31mTypeError\u001B[0m: calculate_flux_err() got an unexpected keyword argument 'window_length'"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {
