--- a/process_TESS_data/process_sector_002.ipynb
+++ b/process_TESS_data/process_sector_002.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:22:44.949927Z",
-     "start_time": "2025-06-24T09:22:44.946600Z"
+     "end_time": "2025-06-24T09:33:42.822665Z",
+     "start_time": "2025-06-24T09:33:40.935318Z"
     }
    },
    "source": [
@@ -22,13 +22,13 @@
     "path = '../research/star_systems/TOI-4504/lightkurve/'\n"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:22:47.048056Z",
-     "start_time": "2025-06-24T09:22:46.958006Z"
+     "end_time": "2025-06-24T09:33:44.031383Z",
+     "start_time": "2025-06-24T09:33:43.929626Z"
     }
    },
    "cell_type": "code",
@@ -166,18 +166,18 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:22:51.444991Z",
-     "start_time": "2025-06-24T09:22:51.384624Z"
+     "end_time": "2025-06-24T09:33:45.724668Z",
+     "start_time": "2025-06-24T09:33:45.659005Z"
     }
    },
    "cell_type": "code",
@@ -188,24 +188,132 @@
    "id": "4b71ef4101f07c74",
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "calculate_flux_err() got an unexpected keyword argument 'window_length'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mcalculate_flux_err\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mwindow_length\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m101\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m df\n",
-      "\u001B[1;31mTypeError\u001B[0m: calculate_flux_err() got an unexpected keyword argument 'window_length'"
-     ]
+     "data": {
+      "text/plain": [
+       "              time      flux  flux_err\n",
+       "0     2.458354e+06  1.002287  0.001695\n",
+       "1     2.458354e+06  1.000515  0.001695\n",
+       "2     2.458354e+06  0.998066  0.001716\n",
+       "3     2.458354e+06  1.000481  0.001702\n",
+       "4     2.458354e+06  1.000525  0.001742\n",
+       "...            ...       ...       ...\n",
+       "1191  2.458381e+06  1.000849  0.002131\n",
+       "1192  2.458381e+06  0.998622  0.002079\n",
+       "1193  2.458381e+06  0.999176  0.002098\n",
+       "1194  2.458381e+06  1.000859  0.002107\n",
+       "1195  2.458381e+06  1.001017  0.002128\n",
+       "\n",
+       "[1196 rows x 3 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>flux</th>\n",
+       "      <th>flux_err</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.458354e+06</td>\n",
+       "      <td>1.002287</td>\n",
+       "      <td>0.001695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.458354e+06</td>\n",
+       "      <td>1.000515</td>\n",
+       "      <td>0.001695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.458354e+06</td>\n",
+       "      <td>0.998066</td>\n",
+       "      <td>0.001716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.458354e+06</td>\n",
+       "      <td>1.000481</td>\n",
+       "      <td>0.001702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.458354e+06</td>\n",
+       "      <td>1.000525</td>\n",
+       "      <td>0.001742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1191</th>\n",
+       "      <td>2.458381e+06</td>\n",
+       "      <td>1.000849</td>\n",
+       "      <td>0.002131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1192</th>\n",
+       "      <td>2.458381e+06</td>\n",
+       "      <td>0.998622</td>\n",
+       "      <td>0.002079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1193</th>\n",
+       "      <td>2.458381e+06</td>\n",
+       "      <td>0.999176</td>\n",
+       "      <td>0.002098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194</th>\n",
+       "      <td>2.458381e+06</td>\n",
+       "      <td>1.000859</td>\n",
+       "      <td>0.002107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1195</th>\n",
+       "      <td>2.458381e+06</td>\n",
+       "      <td>1.001017</td>\n",
+       "      <td>0.002128</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1196 rows × 3 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T13:02:20.838175Z",
-     "start_time": "2025-06-23T13:02:20.769592Z"
+     "end_time": "2025-06-24T09:33:47.990174Z",
+     "start_time": "2025-06-24T09:33:47.922738Z"
     }
    },
    "cell_type": "code",
@@ -231,17 +339,17 @@
      "data": {
       "text/plain": [
        "              time      flux  flux_err\n",
-       "0     2.458354e+06  1.002272       NaN\n",
-       "1     2.458354e+06  1.000501       NaN\n",
-       "2     2.458354e+06  0.998052       NaN\n",
-       "3     2.458354e+06  1.000466       NaN\n",
-       "4     2.458354e+06  1.000511       NaN\n",
+       "0     2.458354e+06  1.002272  0.001694\n",
+       "1     2.458354e+06  1.000501  0.001695\n",
+       "2     2.458354e+06  0.998052  0.001716\n",
+       "3     2.458354e+06  1.000466  0.001702\n",
+       "4     2.458354e+06  1.000511  0.001742\n",
        "...            ...       ...       ...\n",
-       "1191  2.458381e+06  1.000835       NaN\n",
-       "1192  2.458381e+06  0.998607       NaN\n",
-       "1193  2.458381e+06  0.999161       NaN\n",
-       "1194  2.458381e+06  1.000845       NaN\n",
-       "1195  2.458381e+06  1.001002       NaN\n",
+       "1191  2.458381e+06  1.000835  0.002131\n",
+       "1192  2.458381e+06  0.998607  0.002079\n",
+       "1193  2.458381e+06  0.999161  0.002098\n",
+       "1194  2.458381e+06  1.000845  0.002107\n",
+       "1195  2.458381e+06  1.001002  0.002128\n",
        "\n",
        "[1196 rows x 3 columns]"
       ],
@@ -274,31 +382,31 @@
        "      <th>0</th>\n",
        "      <td>2.458354e+06</td>\n",
        "      <td>1.002272</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.001694</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.458354e+06</td>\n",
        "      <td>1.000501</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.001695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2.458354e+06</td>\n",
        "      <td>0.998052</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.001716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2.458354e+06</td>\n",
        "      <td>1.000466</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.001702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2.458354e+06</td>\n",
        "      <td>1.000511</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.001742</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -310,31 +418,31 @@
        "      <th>1191</th>\n",
        "      <td>2.458381e+06</td>\n",
        "      <td>1.000835</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.002131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1192</th>\n",
        "      <td>2.458381e+06</td>\n",
        "      <td>0.998607</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.002079</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1193</th>\n",
        "      <td>2.458381e+06</td>\n",
        "      <td>0.999161</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.002098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1194</th>\n",
        "      <td>2.458381e+06</td>\n",
        "      <td>1.000845</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.002107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1195</th>\n",
        "      <td>2.458381e+06</td>\n",
        "      <td>1.001002</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.002128</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -342,25 +450,33 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T13:02:20.887425Z",
-     "start_time": "2025-06-23T13:02:20.880851Z"
+     "end_time": "2025-06-24T09:33:51.335682Z",
+     "start_time": "2025-06-24T09:33:51.325684Z"
     }
    },
    "cell_type": "code",
    "source": "df2csv(df, full_path[:-4]+\"_p.csv\")",
    "id": "9fe266fa96b9c269",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c0d0ecff0b808ba9"
   }
  ],
  "metadata": {
