--- a/process_TESS_data/get_flux_data_nb1.ipynb
+++ b/process_TESS_data/get_flux_data_nb1.ipynb
@@ -15,11 +15,9 @@
    },
    "cell_type": "code",
    "source": [
-    "from locale import normalize\n",
-    "\n",
+    "# from locale import normalize\n",
     "import lightkurve as lk\n",
     "from lightkurve import search_targetpixelfile\n",
-    "\n",
     "%matplotlib inline"
    ],
    "id": "5d4e34dcc0daee59",
@@ -329,7 +327,7 @@
    "source": [
     "search_result = lk.search_lightcurve('TIC349972412', author=['SPOC', 'TESS-SPOC'], sector=31)\n",
     "lc_collection = search_result.download_all()\n",
-    "lc_collection.plot();\n",
+    "lc_collection.plot()\n",
     "search_result"
    ],
    "id": "9f049860ad8951c",
@@ -386,7 +384,7 @@
    "source": [
     "search_result = lk.search_lightcurve('TIC349972412', author=['QLP'], sector=31)\n",
     "lc_collection = search_result.download_all()\n",
-    "lc_collection.plot();\n",
+    "lc_collection.plot()\n",
     "search_result"
    ],
    "id": "9bc7296744d35489",
@@ -439,7 +437,7 @@
    "source": [
     "search_result = lk.search_lightcurve('TIC349972412', author=['QLP', 'TGLC'], sector=6)  # normalized: 'TGLC', 'QLP'\n",
     "lc_collection = search_result.download_all()\n",
-    "lc_collection.plot();\n",
+    "lc_collection.plot()\n",
     "search_result"
    ],
    "id": "33756f6f50d32865",
@@ -494,7 +492,7 @@
    "source": [
     "search_result = lk.search_lightcurve('TIC349972412', author=['GSFC-ELEANOR-LITE', 'TASOC'], sector=6)\n",
     "lc_collection = search_result.download_all()\n",
-    "lc_collection.plot();\n",
+    "lc_collection.plot()\n",
     "search_result"
    ],
    "id": "6b2122a1fb27ef75",
@@ -564,7 +562,7 @@
     "# search_result = lk.search_lightcurve('TIC349972412', author=['QLP', 'TGLC'], sector=6)\n",
     "# normalized: 'TGLC', 'QLP'\n",
     "lc_collection = search_result.download_all()\n",
-    "lc_collection.plot();\n",
+    "lc_collection.plot()\n",
     "search_result"
    ],
    "id": "5f7bfac69dc5ba11",
